@@ -19,6 +19,6 @@
 #
 ##################################################################################
 
-import osrframework.logger
+import osrframework.utils.logger
 # Calling the logger when being imported
-osrframework.logger.setupLogger(loggerName="osrframework.thirdparties.haveibeenpwned_com")
+osrframework.utils.logger.setupLogger(loggerName="osrframework.thirdparties.haveibeenpwned_com")
