@@ -1,6 +1,8 @@
 For more information, check the README.md in http://github.com/i3visio/osrframework
 
 v0.1.0, 2014/12/31 -- Initial release.
+- Added a third-party API wrapper for Skype: checkIPDetails.py
+- Added a third-party API wrapper for md5crack.com: checkIPDetails.py
 - Added a third-party API wrapper for ip-api.com: checkIPDetails.py
 - Added a third-party API wrapper for haveibeenpwned.com: checkIfEmailWasHacked.py
 - Added a third-party API wrapper for blockchain.info: getBitcoinAddressDetails.py
